# algo-bot

./: README.md
algo-trading-analysis-main/: .gitignore  build_cpp.bat  example_backtest.py  main.py  pyproject.toml  requirements.txt  run_bt_backtest.py  run_cpp_server.bat
algo-trading-analysis-main/cpp_engine/: CMakeLists.txt  IMPLEMENTATION_SUMMARY.md  QUICKSTART.md  README.md  generate_protos.bat
algo-trading-analysis-main/cpp_engine/include/: strategy.hpp
algo-trading-analysis-main/cpp_engine/protos/: backtest.proto
algo-trading-analysis-main/cpp_engine/src/: main.cpp  strategy.cpp
algo-trading-analysis-main/docs/: ARCHITECTURE.md  BACKTESTING_RESULTS.md  MATHEMATICAL_APPENDIX.md  RISK_MANAGEMENT.md  STRATEGY_DOCS.md
algo-trading-analysis-main/frontend/: README.md  package-lock.json  package.json  tailwind.config.ts
algo-trading-analysis-main/frontend/app/: globals.css  layout.tsx  page.tsx
algo-trading-analysis-main/frontend/components/: TradingChart.tsx  TradingViewChart.tsx
algo-trading-analysis-main/scripts/: generate_sample_data.py
algo-trading-analysis-main/src/: __init__.py  config.py
algo-trading-analysis-main/src/api/: backtests.py  strategies.py
algo-trading-analysis-main/src/backtesting/: __init__.py  backtest_pb2.py  backtest_pb2_grpc.py  bt_engine.py  engine.py  metrics.py
algo-trading-analysis-main/src/strategies/: __init__.py  base_strategy.py  bt_mean_reversion.py  bt_momentum.py  buy_hold.py  ensemble_strategy.py  mean_reversion_strategy.py  momentum_strategy.py  ou_mean_reversion.py  pairs_arbitrage.py  regime_momentum.py  simple_momentum.py
algo-trading-analysis-main/src/utils/: __init__.py  data_loader.py  risk_management.py
algo-trading-analysis-main/tests/: __init__.py  test_all_strategies.py  test_backtesting.py  test_risk_management.py
