[project]
name = "algo-trading-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "backtrader>=1.9.78.123",
    "black>=26.1.0",
    "fastapi>=0.128.0",
    "flake8>=7.3.0",
    "hmmlearn>=0.3.3",
    "loguru>=0.7.3",
    "mypy>=1.19.1",
    "numpy>=2.4.1",
    "pandas>=2.3.3",
    "plotly>=6.5.2",
    "pydantic-settings>=2.12.0",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.0",
    "sphinx>=9.1.0",
    "sphinx-rtd-theme>=3.1.0",
    "streamlit>=1.53.1",
    "uvicorn>=0.40.0",
]
